RMA link in faq fixed, z-index issues resolved

--- a/_swc_styles.css
+++ b/_swc_styles.css
@@ -8,6 +8,7 @@ body{background:url(images/Wrigley_Field_Bleachers9.jpg) no-repeat fixed center 
 .highlightBG_2 {background: #5c6a60;}
 .redText{color:#7e0000;}
 a.redText{color:#7e0000;}
+.strong{font-weight:bold;}
 .underline {text-decoration:underline;}
 .blockLink, .blockLink a {text-decoration:none;}
 .bold {font-weight:bold;}
@@ -95,7 +96,7 @@ a.redText{color:#7e0000;}
 	left:0px;
 	right:0px;
 	top:0px;
-	z-index: 101;
+	z-index: 100;
 }
 
 #headerTeam {display:block; border:0px; text-decoration:none;}
@@ -196,7 +197,7 @@ a.redText{color:#7e0000;}
 	right: 0px;
 }
 
-.homepageBanner{display: block; text-decoration: none; border:none; width: 100%; background:url(images/homepage/SportsWorldChicago-Homepagev3.jpg) no-repeat center center; position:relative;}
+.homepageBanner{display: block; text-decoration: none; border:none; width: 100%; background:url(images/homepage/SportsWorldChicago-Homepagev3.jpg) no-repeat center center; position:relative;z-index:50;}
 .homeSlideshow{display:inline-block; vertical-align:middle; max-width: 60%; width: 100%; height:100%;}
 .homeSlideshow a{display:block; width: 100%; height:100%;}
 .homeSlideshow a .vAlignHelper{display:inline-block; vertical-align:middle; height:100%;}
